assets/css/custom.css
/* ... */
#header-intro .bottom{
margin-top: auto;
margin-bottom: auto;
}

/*.scroll-hint{
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
    xcontent: '';
    xdisplay: block;
    xposition: absolute;
    top: 0;
    xleft: 0;
    width: 100%;
    height: 200%;
    background-repeat: repeat-y;
    background-image: url(../img/dotted-2.svg);
    animation: a-scrollHint 30s linear infinite;
    overflow: hidden;
    box-sizing: border-box;
}*/

.scroll-hint {
	width: 15px;
	height: 400%;
	background-repeat: repeat-y;
    background-image: url(../img/dotted-2.svg);
	align-self: center;
	margin-top: 40px;
	animation: a-scrollHint .8s linear infinite;
}

@keyframes a-scrollHint {
  0% {
    transform: translateY(0%);
  }
  100% {
    transform: translateY(15px);
  }
}

.header-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 13px;
  margin-right: 2px;
}

.header-icons a {
    // no borders
    outline: 0 !important;
    border: none !important;
    outline-style: none !important;
    -moz-outline-style: none !important;
    padding: none;
    margin: none;
    text-decoration: none;
  }
.header-icons .icon {
    text-align: center;
    color: #ab9b8a;
    width: 0px;
    height: 20px;
    font-size: 14px;
    padding: 5px;
    margin: 0px;
    transition: all .5s;
    border: 0;
    }
    .header-icons:hover {
      color: #ff0000;
      xbackground: #000;
    }
    .header-icons:active {
      color: #ff0000;
      /* background: #000; */
    }
    


@media only screen and (min-width:768px) {
.header-icons .icon {
      width: 0px;
      height: 30px;
      font-size: 14px;
      line-height: 30px;
      }
}

.header-links .link {
color: #0f0b0c;
background-color: #f8d260;
	border-style: solid;
	border-color: #f8d260;
	border-width: 2px;
	padding: 9px 17px;
	border-radius: 25px;
	xletter-spacing: .28em;
	xfont-family: "bebas-neue-pro", sans-serif;
	  font-family: "proxima-nova", sans-serif;
	font-weight: 700;
	font-style: normal;
	font-size: 15px;
	margin-right: 14px;
}

.header-links .link:hover {
background-color: #fff;
}

.header-links .link3 {
	color:#333;
	border-style: solid;
	border-color: #333;
	border-width: 2px;
	padding: 9px 17px;
	border-radius: 25px;
	font-family: "proxima-nova", sans-serif;
	font-weight: 700;
	font-style: normal;
	font-size: 15px;
	margin-right: 14px;
	text-decoration: none;
}

.header-links .link3:hover {
color: #fff;
background-color: #333;
}

.header-links .link2 {
	color:#0f0b0c;
	border-style: solid;
	border-color: #f53416;
	border-width: 2px;
	padding: 9px 9px;
	letter-spacing: .28em;
	font-family: "bebas-neue-pro", sans-serif;
	font-weight: 600;
	font-style: normal;
	font-size: 13px;
	margin-right: 14px;
	text-decoration: none;
}

.header-links .link2:hover {
color: #fff;
background-color: #f53416;
}

.spacera {
margin-top: 1%;
}

@media screen and (min-width:768px){
.spacera {
margin-top: 9%;
}
}

.spacer1 img {
width: 20px;
}

.spacer {
margin-top: 30px;
}

.user-details {
	margin-left: 10%;
	margin-right: 10%;
}

.user-details h2 {
	max-width: 800px;
	margin-left: auto;
	margin-right: auto;
}

#about {
xmax-width: 10000px;
background-color: #d5d7d5;
width: 100%;
font-family: "proxima-nova", sans-serif;
}

#about h1 {
font-weight: 700;
font-style: normal;
margin-left: auto;
margin-right: auto;
margin-top: 0;
max-width: 500px;
}

#about h2 {
font-weight: 500;
font-style: normal;
font-size: 18px;
margin-top: 0;
max-width: 480px;
}

#about div {
margin-top: 0;
}

#clients {
font-family: "proxima-nova", sans-serif;
}

#clients h1 {
font-weight: 700;
font-style: normal;
}

#clients h2 {
font-weight: 500;
font-style: normal;
font-size: 18px;
}

#clientlist {
  height: 90px;
  width: 8596px;
}

.clientLogos {
    width: 400%;
	background-repeat: repeat-x;
    background-image: url(../img/clientlogos.webp);
    background-size: 2149px 90px;
	xalign-self: center;
	animation: clientscroll 80s linear infinite;
}

@keyframes clientscroll {
  0% {
    transform: translatex(0px);
  }
  100% {
    transform: translatex(-6477px);
  }
}


#tagline .top{
	margin-top: 100px;
	text-align: center;
	font-size: 27px;
	display: block;
	line-height: 1;
	color: #374f51;
	font-family: 'BOOKmanOpti-Light','Montserrat', sans-serif;
	xletter-spacing: -1px;
}

#header .top{
	margin-top: 100px;
	text-align: center;
	font-size: 27px;
	display: block;
	line-height: 1;
	color: #374f51;
	font-family: 'BOOKmanOpti-Light','Montserrat', sans-serif;
	xletter-spacing: -1px;
}

.bgc {
background-color: #FFF;
}

.vjs-big-play-button {
	opacity: 0 !important;
}

.video-js:hover .vjs-big-play-button {
	opacity: 1 !important;
}

.why-video {
  text-align: center;
  margin: 5px auto;
  margin-left: 5%;
  margin-right: 5%;
  font-size: 95%;
  h1 {
    font-weight: 400;
  }
}

.why-video h1 {
    font-size: 150%;
    margin-top: 3em;
}

.why-video a {
color: #302729;
font-weight: 500;
}

.videobox {
display: flex;

flex-wrap: wrap;
justify-content:center;
}
#reel {
width: 100%;
height: 95vh;
}
#reel2 {
 height: calc(50vw);
 padding-top: 28px;
 width: 100%;
}

@media screen and (min-width:1000px){
.videobox {
 flex-wrap:unset;
 max-width: calc(177.777778vh);
 height: calc(34vw);
 }
#reel {
width:23.6%;
padding-right:20px;
height: unset;
}
#reel2 {
 height: 100%;
 padding-top: unset;
 width: calc(100% - 23.6% - 22px);
}
}

.footer {
  background: #333;
}

